# repoyear

./: .env.example  .gitignore  .pinact.yaml  .pre-commit-config.yaml  .typos.toml  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  compact.html  deno.jsonc  eslint.config.js  graphql_codegen.ts  index.html  openapi.json  package.json  server.ts  static.html  vite.config.ts
.github/: dependabot.yml
.github/workflows/: claude-pr-reviews.yaml  claude-response.yaml  dependabot-prek.yaml  pr-checks-other.yaml  pr-checks-rust.yaml  pr-checks-ts.yaml  pr-checks.yaml  prek-auto-update.yaml  release.yaml
backend/: .pre-commit-config.yaml  Cargo.toml  deny.toml
backend/examples/: mock_server.rs
backend/src/: api.rs  lib.rs  main.rs  params.rs  repos.rs  server.rs
backend/src/api/: definition.rs  implementation.rs  mock.rs
backend/src/repos/: config.rs  errors.rs  mod.rs  scan.rs
backend/src/test/: mod.rs
docs/: TESTING.md
rust-crate/: .pre-commit-config.yaml  Cargo.toml  build.rs  deny.toml
rust-crate/examples/: mock_server.rs
rust-crate/src/: api.rs  main.rs  params.rs  server.rs
rust-crate/src/api/: definition.rs  implementation.rs  mock.rs
scripts/: check-static-data.ts  generate-api.sh  generate-fixture.ts  generate-static.ts  get-version.sh
src/: App.css  App.tsx  App.vitest.tsx  ErrorBoundary.tsx  QueryCache.tsx  compact.tsx  main.tsx  model.test.ts  model.ts  static.tsx  staticData.ts  util.test.ts  util.ts  vite-env.d.ts
src/__fixtures__/: README.md  github-3-years.json  github-contributions.json  github-extra-week.json  github.json
src/api/: Api.ts  client.ts  http-client.ts  openapi.json
src/auth/: tokenManager.ts
src/components/: CalendarHeatMap.css  CalendarHeatMap.tsx  CompactGraph.tsx  ContributionsGraph.tsx  ContributionsView.tsx  ErrorBoundary.tsx  Footer.tsx  QueryCache.tsx  RepoYearView.tsx  RepositoryList.css  RepositoryList.test.tsx  RepositoryList.tsx  RepositoryList.vitest.tsx  StatusMessage.test.tsx  StatusMessage.tsx  SummaryBox.css  SummaryBox.tsx
src/github/: GitHubMark.tsx  api.ts  gql.ts
src/hooks/: useKeyMonitor.ts  useStaticCalendar.ts  useTokenManager.ts
src/model/: Calendar.fixture.test.ts  Calendar.pagination.test.ts  Calendar.test.ts  Calendar.ts  Day.test.ts  Day.ts  Filter.ts  Repository.ts
src/test/: vitest.d.ts
src/utils/: persister.ts
