[package]
name = "repoyear-backend"
version = "0.6.0"
authors = ["Daniel Parks <oss-repoyear@demonhorse.org>"]
description = ""
homepage = "https://github.com/danielparks/repoyear"
repository = "https://github.com/danielparks/repoyear"
documentation = "https://github.com/danielparks/repoyear"
readme = "README.md"
exclude = [".*", "/release.sh"]
keywords = []
categories = [] # https://crates.io/category_slugs
license = "MIT OR Apache-2.0"
edition = "2024"
rust-version = "1.85"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.27", features = ["derive", "env"] }
dropshot = "0.16.3"
git2 = { version = "0.20.3", default-features = false }
reqwest = { version = "0.12.24", features = ["json"] }
schemars = { version = "0.8", features = ["preserve_order"] }
semver = "1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
slog = "2.7"
slog-async = "2.8"
slog-term = "2.9"
termcolor = "1.4.1"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }

[lints]
workspace = true

[dev-dependencies]
assert2 = "0.3.16"
bstr = "1.12.1"
duct = "1.1.1"
shell-words = "1.1.1"
testdir = "0.9.3"
