[package]
name = "contributions-tracker"
version = "0.5.1"
authors = ["Daniel Parks <oss-contributions-tracker@demonhorse.org>"]
description = ""
homepage = "https://github.com/danielparks/contributions-tracker"
repository = "https://github.com/danielparks/contributions-tracker"
documentation = "https://github.com/danielparks/contributions-tracker"
readme = "README.md"
exclude = [".*", "/release.sh"]
keywords = []
categories = [] # https://crates.io/category_slugs
license = "MIT OR Apache-2.0"
edition = "2024"
rust-version = "1.85"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.27", features = ["derive", "env"] }
dropshot = "0.16.3"
reqwest = { version = "0.12.24", features = ["json"] }
schemars = { version = "0.8", features = ["preserve_order"] }
semver = "1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
slog = "2.7"
slog-async = "2.8"
slog-term = "2.9"
termcolor = "1.4.1"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }

[lints]
workspace = true

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
missing_docs_in_private_items = "warn"

# Other restriction lints
allow_attributes = "warn"
allow_attributes_without_reason = "warn"
arithmetic_side_effects = "warn"
as_underscore = "warn"
assertions_on_result_states = "warn"
dbg_macro = "warn"
default_union_representation = "warn"
empty_structs_with_brackets = "warn"
filetype_is_file = "warn" # maybe?
fn_to_numeric_cast_any = "warn"
format_push_string = "warn" # maybe? alternative is fallible.
get_unwrap = "warn"
impl_trait_in_params = "warn"
integer_division = "warn"
lossy_float_literal = "warn"
mem_forget = "warn"
mixed_read_write_in_expression = "warn"
multiple_inherent_impl = "warn"
multiple_unsafe_ops_per_block = "warn"
mutex_atomic = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
same_name_method = "warn"
semicolon_inside_block = "warn"
str_to_string = "warn"
undocumented_unsafe_blocks = "warn"
unnecessary_safety_doc = "warn"
unnecessary_self_imports = "warn"
unneeded_field_pattern = "warn"
verbose_file_reads = "warn"

# Pedantic exceptions
let_underscore_untyped = "allow"
manual_string_new = "allow"
map_unwrap_or = "allow"
module_name_repetitions = "allow"
unnecessary_debug_formatting = "allow" # display() doesn’t escape invalid chars

# Nursery exceptions
option_if_let_else = "allow"
